--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@originjs/vite-plugin-federation": "^1.3.5",
     "axios": "^1.6.8",
     "primeicons": "^7.0.0",
     "primevue": "^3.51.0",
